--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
         </div>
         <div class="choices">
             <div id="r" class="choice">
-                <img src="/images/rock.png" alt="">
+                <img src="../images/rock.png" alt="">
             </div>
             <div id="p" class="choice">
                 <img src="/images/paper.png" alt="">
