--- a/src/index.html
+++ b/src/index.html
@@ -22,13 +22,13 @@
         </div>
         <div class="choices">
             <div id="r" class="choice">
-                <img src="/images/rock.png" alt="">
+                <img src="../images/rock.png" alt="">
             </div>
             <div id="p" class="choice">
-                <img src="/images/paper.png" alt="">
+                <img src="../images/paper.png" alt="">
             </div>
             <div id="s" class="choice">
-                <img src="/images/scissors.png" alt="">
+                <img src="../images/scissors.png" alt="">
             </div>
         </div>
         <span class="actionMessage">VS</span>
